Fix about section spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,12 +328,16 @@ a.link:hover {
 }
 
 /* About */
+body.page-about main {
+    margin-top: 140px;
+}
+
 #about {
-    padding-top: 2.5rem;
+    padding-top: 0;
 }
 
 #about h1 {
-    margin-top: 0;
+    margin-top: 0.5rem;
 }
 
 #about .intro {
